# ast-explore

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pypi-publish.yml
src/ast_explain/: __init__.py
src/ast_explain/explore/: __init__.py  cli.py  display.py  explorer.py
src/ast_explore/: __init__.py  cli.py  explorer.py
