[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "ast-explore"
version = "0.1.0"
description = "Tool for exploring the AST of given Python source code."
readme = "README.md"
keywords = [
  "ast",
  "ast explainer",
  "ast explorer",
  "ast viewer",
]
license = { file = "LICENSE" }
authors = [
  { name = "Stefanie Molin", email = "ast-explore@stefaniemolin.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
urls.Documentation = "https://github.com/stefmolin/ast-explore"
urls.Homepage = "https://github.com/stefmolin/ast-explore"
urls.Source = "https://github.com/stefmolin/ast-explore"
scripts.ast-explore = "ast_explore.cli:main"

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 88
format.indent-style = "space"
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle error
  "ERA",  # eradicate (commented out code)
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "N",    # pep8-naming
  "PERF", # perflint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "TC",   # flake8-type-checking (performance improvements)
  "TD",   # flake8-todos
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warning
]
lint.ignore = [
  "E501",   # line-too-long
  "TRY003", # raise-vanilla-args
]
lint.extend-per-file-ignores."tests/*" = [ "ANN" ]  # don't require annotations for tests
lint.isort.known-first-party = [
  "ezslides",
]
lint.isort.split-on-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unused_configs = true

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks
  "ES01", # but don't require an extended summary
  "EX01", # or examples
  "SA01", # or a see also section
  "SS06", # and don't require the summary to fit on one line
]
exclude = [  # don't report on checks for these
  "\\.__init__$",
  "\\.__repr__$",
  "\\.__str__$",
]
override_SS05 = [  # allow docstrings to start with these words
  "^Process ",
  "^Assess ",
  "^Access ",
]
